--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,10 @@
         <title>{{ title }}</title>
     </head>
     <body>
-        <h1>
-            <small class="bg-body-secondary mb-1 p-1">Миссия Колонизация Марса</small>
-        </h1>
+        <nav class="navbar navbar-light bg-light">
+            <h1>Миссия Колонизация Марса</h1>
+            <span class="navbar-brand mb-1 p-1">Mars One</span>
+        </nav>
         <h4>И на Марсе будут яблони цвести!</h4>
                 <!-- Место для вставки блока в странице -->
     </body>
