--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <title>{{ title }}</title>
     </head>
     <body>
         <nav class="navbar navbar-light bg-light">
             <h1>Миссия Колонизация Марса</h1>
             <span class="navbar-brand mb-1 p-1">Mars One</span>
         </nav>
-        <h4>И на Марсе будут яблони цвести!</h4>
-                <!-- Место для вставки блока в странице -->
+        <h4><small class="text-black-50">И на Марсе будут яблони цвести!</small></h4>
+        <h2>Размещение по каютам</h2>
+        {% set members = crew_members %}
+        {% for member in crew_members %}
+        <h6>{{member}} - Каюта № {{loop.index}} {%if loop.first %} - капитан корабля {% endif %}</h6>
+        {% endfor %}
+
     </body>
 </html>
